fixed UI inconsistencies in dark mode & responsiveness (#50)
* fix(style): fixed UI inconsistencies in dark mode & responsiveness

* fix: removed yarn.lock

* fix(style): added drop shadow consistency between themes

* Delete yarn.lock

* Delete newsArticles.txt

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@ html{
     --cardAccent:       rgb(255, 255, 255);
     --cardHoverAccent:  rgb(228, 242, 255);
     --bgSubcards:       rgb(193, 222, 253);
+	--btnDropShadow:    rgb(171, 171, 171);
 }
 html[data-theme='dark']{
     --bg:               rgb(35, 35, 35);
@@ -15,8 +16,9 @@ html[data-theme='dark']{
     --textDescription:  rgb(140, 140, 172);
     --textHeadlines:    rgb(237, 237, 237, 0.8);
     --cardAccent:       rgb(45, 45, 45);
-    --cardHoverAccent:  rgb(11, 14, 44);
+    --cardHoverAccent:  rgb(35, 49, 83);
     --bgSubcards:       rgb(66, 92, 153);
+	--btnDropShadow:    rgb(42, 42, 42);
 }
 
 body {
@@ -225,15 +227,25 @@ html.transition *:after {
     ul.navbar :nth-child(2) {order: -1;}
     #app-name {
         padding: 0px;
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
     .invertIcon {
         position: fixed;
-        bottom:50px;
-        right:50px;
-        transform: scale(1.8);
+        bottom:25px;
+        right:25px;
+        transform: scale(1.6);
+		box-shadow: 0px 0px 12px 1px var(--btnDropShadow);
     }
     body {
         padding-bottom: 70px;
     }
+	.news.row{
+		margin: 0 0.5rem;
+	}
+	.card.news p.news {
+		padding: 0.5rem 0 0;
+	}
+	.card.news .byline.news{
+		padding: 0.75rem 0 5px;
+	}
 }
